commit 1532bf944d6a043da9e47462e63b4bd870f4077c
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Fri Jan 13 23:01:08 2012 +0600

    fix for tracker

commit f05c0c4cf308a77b5bd90710d8a40f0cbeebd87a
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Fri Jan 13 03:35:20 2012 +0600

    add gravatar support for user pics

commit 8c8128a7f8784c5dacfdcbfaf8f2399b8e3bcae3
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Fri Jan 13 02:12:17 2012 +0600

    add commit id into footer

commit 26356140d1538613a34f9ad405001b082724f0a8
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Fri Jan 13 02:02:00 2012 +0600

    cosmetic fixes

commit 9a1c09d48432d5c00c5de9324a432e0f5ed3afed
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Fri Jan 13 02:00:56 2012 +0600

    add tracker action for threads 2

commit 78ae81786b3d4b0f08b2cc300ef1fe46f14cdea5
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Fri Jan 13 02:00:00 2012 +0600

    add tracker action for threads

commit ada4b8f3c444c804f2bd9d4ecdb463455b884dd6
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Fri Jan 13 01:58:13 2012 +0600

    fix access plugin

commit c8f3ee3d0538e32b6067a64cc6572018aeb31a50
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Thu Jan 12 03:07:35 2012 +0600

    add paginator to Thread->show

commit ed834c8d9ec9976dedd6327a8564abb2db5943b2
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Thu Jan 12 02:05:47 2012 +0600

    New custom SQL request will be locate in Spaghetti::SQL

commit ea86b08141f97eae4b2742fe760a4b04a1068065
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Wed Jan 11 23:34:46 2012 +0600

    owner can change his threads always... if he`s not banned

commit 460060cb9a920521e8026e192e9f3905ea37d19e
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Wed Jan 11 21:27:09 2012 +0600

    got a name :)

commit fc62b8a18ba258d313d3eb7dfd5de5577362fa88